[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Fonts/ZenMaruGothic-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Interface/CharacterShop.gd" type="Script" id=2]
[ext_resource path="res://Assets/GFX/Characters/Kaida/ButtonNormalTexture.png" type="Texture" id=3]
[ext_resource path="res://Assets/GFX/Interface/Next.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/Interface/Return.png" type="Texture" id=5]
[ext_resource path="res://Assets/GFX/Interface/Previous.png" type="Texture" id=6]
[ext_resource path="res://Assets/GFX/Interface/Disabled.png" type="Texture" id=7]
[ext_resource path="res://Assets/GFX/Characters/Mamoru/ButtonNormalTexture.png" type="Texture" id=8]
[ext_resource path="res://Assets/GFX/Interface/Shop/CoinPrice150.PNG" type="Texture" id=9]
[ext_resource path="res://Assets/GFX/Interface/Shop/CharacterUnlocked.PNG" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="CharacterShop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLeft" type="Label" parent="."]
margin_left = 615.0
margin_top = 250.0
margin_right = 865.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 1 )
text = "FillText"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionMid" type="Label" parent="."]
margin_left = 1015.0
margin_top = 250.0
margin_right = 1265.0
margin_bottom = 350.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "FillText"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionRight" type="Label" parent="."]
margin_left = 1415.0
margin_top = 250.0
margin_right = 1665.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 1 )
text = "FillText"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharLeft" type="TextureRect" parent="."]
margin_left = 615.0
margin_top = 340.0
margin_right = 865.0
margin_bottom = 740.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharMid" type="TextureRect" parent="."]
margin_left = 1015.0
margin_top = 340.0
margin_right = 1265.0
margin_bottom = 740.0
texture = ExtResource( 3 )

[node name="CharRight" type="TextureRect" parent="."]
margin_left = 1415.0
margin_top = 340.0
margin_right = 1665.0
margin_bottom = 740.0
texture = ExtResource( 8 )

[node name="PriceLeft" type="TextureButton" parent="."]
margin_left = 615.0
margin_top = 740.0
margin_right = 865.0
margin_bottom = 840.0
texture_normal = ExtResource( 9 )

[node name="PriceMid" type="TextureButton" parent="."]
margin_left = 1015.0
margin_top = 740.0
margin_right = 1265.0
margin_bottom = 840.0
rect_min_size = Vector2( 250, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 10 )

[node name="PriceRight" type="TextureButton" parent="."]
margin_left = 1415.0
margin_top = 740.0
margin_right = 1665.0
margin_bottom = 840.0
texture_normal = ExtResource( 10 )

[node name="Return" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 250.0
margin_bottom = 250.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureButton" parent="."]
margin_left = 2030.0
margin_top = 830.0
margin_right = 2180.0
margin_bottom = 980.0
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 7 )

[node name="Previous" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 830.0
margin_right = 250.0
margin_bottom = 980.0
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[connection signal="pressed" from="PriceLeft" to="." method="_on_PriceLeft_pressed"]
[connection signal="button_down" from="PriceMid" to="." method="_on_PriceMid_button_down"]
[connection signal="button_down" from="PriceRight" to="." method="_on_PriceRight_button_down"]
